# CVRPController

./: .clang-format  .gitignore  CMakeLists.txt  Controller.cpp  LICENSE  README.md  TestSolver.cpp  genScript.sh  genScript1.sh  genScript2.sh  genScript3.sh  makefile  model.h
.github/ISSUE_TEMPLATE/: bug_report.md
InstancesExplicitDistances/: Loggi-n601-k42.vrp  toy2.vrp
InstancesRounded/: toy.vrp
LKH/: X.par
LKH/SRC/: FindTour.c  LKHmain.c  ReadParameters.c  SolveSubproblem.c  WriteTour.c
LKH/SRC/INCLUDE/: LKH.h
Script/: bash.sh
Script/InstancesNotRounded/: Golden_10.vrp  Golden_11.vrp  Golden_12.vrp  Golden_13.vrp  Golden_14.vrp  Golden_15.vrp  Golden_16.vrp  Golden_17.vrp  Golden_18.vrp  Golden_19.vrp  Golden_20.vrp  Golden_9.vrp  tai385.vrp
src/: CMakeLists.txt  Controller.cpp  Controller.h  Controlller.h  Data.cpp  Data.h  Instance.cpp  Instance.h  OutputFile.cpp  OutputFile.h  Solution.h  dSolution.cpp  dSolution.h  iSolution.cpp  iSolution.h  main.cpp
